Fri Feb 13 21:32:23 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:

          Added new autobuild tests.

        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/ProgressIndicator.cpp:
        * tests/DCPS/Thrasher/Publisher.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/run_test.pl:

          Improved logging; added new test profiles (hint: for a good
          time, issue: 'perl run_test.pl aggressive').

Fri Feb 13 20:59:01 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/run_test.pl:

          Added support for programmatic transport configuration.

        * tests/DCPS/Thrasher/publisher.ini:

          Removed this file.

Fri Feb 13 20:52:40 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:

          Extended initializers to explicitly cover all members.

        * tests/DCPS/Thrasher/run_test.pl:

          Added ../FooType to LD_LIBRARY_PATH before starting the test
          executables.

Fri Feb 13 20:42:13 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Thrasher/DataReaderListenerImpl.h:
        * tests/DCPS/Thrasher/DataReaderListenerImpl.cpp:
        * tests/DCPS/Thrasher/ParticipantTask.h:
        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/ProgressIndicator.h:
        * tests/DCPS/Thrasher/ProgressIndicator.cpp:
        * tests/DCPS/Thrasher/Publisher.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/Thrasher.mpc:
        * tests/DCPS/Thrasher/publisher.ini:
        * tests/DCPS/Thrasher/run_test.pl:
        * tests/DCPS/Thrasher/tcp.conf:

          Next pass at Thrasher test.

        * tests/DCPS/Thrasher/subscriber.ini:

          Removed this file.
