@@ -5,6 +5,7 @@
 #include <ace/Atomic_Op_T.h>
 #include <ace/Basic_Types.h>
 #include <ace/Log_Msg.h>
+#include <ace/OS_NS_stdlib.h>
 #include <ace/Thread_Mutex.h>
 
 #include <dds/DdsDcpsInfrastructureC.h>
