@@ -18,7 +18,7 @@ $sub_opts = "$opts ";
 
 my $arg = shift;
 if ($arg eq 'low') {
-  $pub_opts .= "-t 4 -s 256";
+  $pub_opts .= "-t 8 -s 128";
   $sub_opts .= "-n 1024";
 
 } elsif ($arg eq 'medium') {
@@ -30,8 +30,12 @@ if ($arg eq 'low') {
   $sub_opts .= "-n 1024";
 
 } elsif ($arg eq 'aggressive') {
-  $pub_opts .= "-t 1024 -s 1";
+  $pub_opts .= "-t 64 -s 16";
   $sub_opts .= "-n 1024";
+
+} elsif ($arg eq 'single') {
+  $pub_opts .= "-t 1 -s 1";
+  $sub_opts .= "-n 1";
 
 } else { # default (i.e. lazy)
   $pub_opts .= "-t 1 -s 1024";
@@ -40,43 +44,44 @@ if ($arg eq 'low') {
 
 $status = 0;
 
-
 $dcpsrepo_ior = "repo.ior";
 $repo_bit_opt = $opts;
 
 unlink $dcpsrepo_ior;
 
-$DCPSREPO = PerlDDS::create_process ("$ENV{DDS_ROOT}/bin/DCPSInfoRepo",
+$DCPSREPO = PerlDDS::create_process("$ENV{DDS_ROOT}/bin/DCPSInfoRepo",
                                     "$repo_bit_opt -o $dcpsrepo_ior ");
-$Subscriber = PerlDDS::create_process ("subscriber", "$sub_opts");
-$Publisher = PerlDDS::create_process ("publisher", "$pub_opts ");
 
-$DCPSREPO->Spawn ();
-if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
+$Subscriber = PerlDDS::create_process("subscriber", "$sub_opts");
+
+$Publisher = PerlDDS::create_process("publisher", "$pub_opts ");
+
+$DCPSREPO->Spawn();
+if (PerlACE::waitforfile_timed($dcpsrepo_ior, 30) == -1) {
     print STDERR "ERROR: waiting for DCPSInfo IOR file\n";
     $DCPSREPO->Kill ();
     exit 1;
 }
 
-$Subscriber->Spawn ();
-$Publisher->Spawn ();
+$Subscriber->Spawn();
+$Publisher->Spawn();
 
-$SubscriberResult = $Subscriber->WaitKill (300);
+$SubscriberResult = $Subscriber->WaitKill(300);
 if ($SubscriberResult != 0) {
-    print STDERR "ERROR: subscriber returned $SubscriberResult \n";
-    $status = 1;
+  print STDERR "ERROR: subscriber returned $SubscriberResult \n";
+  $status = 1;
 }
 
 $PublisherResult = $Publisher->WaitKill (300);
 if ($PublisherResult != 0) {
-    print STDERR "ERROR: publisher returned $PublisherResult \n";
-    $status = 1;
+  print STDERR "ERROR: publisher returned $PublisherResult \n";
+  $status = 1;
 }
 
 $ir = $DCPSREPO->TerminateWaitKill(5);
 if ($ir != 0) {
-    print STDERR "ERROR: DCPSInfoRepo returned $ir\n";
-    $status = 1;
+  print STDERR "ERROR: DCPSInfoRepo returned $ir\n";
+  $status = 1;
 }
 
 unlink $dcpsrepo_ior;
